--- a/src/css/scss/components/_btn.scss
+++ b/src/css/scss/components/_btn.scss
@@ -34,7 +34,7 @@
 
 	&_danger, &_success {
 	    color: #fff;
-	    border: 1px solid transparent;
+	    border: 1px solid black;
 	}
 
 	&_success + &_danger {
