--- a/src/css/scss/components/_fields.scss
+++ b/src/css/scss/components/_fields.scss
@@ -1,10 +1,10 @@
 .fields {
     margin-bottom: 15px;
-    padding: 20px;
+	padding: 20px;
     width: 530px;
     border: 2px solid black;
     color: black;
-    background: darksalmon;
+	background: #009688;
 
     &__group {
 	    margin-bottom: 15px;  
@@ -48,4 +48,3 @@
 	    width: 32%;
 	}
 }
-
